server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-server-deployment
  labels:
    app: kube-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kube-server
  template:
    metadata:
      labels:
        app: kube-server
    spec:
      containers:
        - name: kube-server
          image: dilankanimsara/kube-server:v1.03
          ports:
            - containerPort: 8080 # container port of the deployment. this should match the targetPort in the service
