server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-server-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.kube-server.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-server-service
                port:
                  number: 8050

# kubectl get ingress
# add host entry to /etc/hosts
